--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidxComposeBom = "2024.10.01"
+androidxComposeBom = "2024.11.00"
 
 activityCompose = "1.9.3"
 coilCompose = "2.7.0"
@@ -12,10 +12,15 @@ navigation = "2.8.4"
 room = "2.6.1"
 roomKtx = "2.6.1"
 koin = "4.0.0"
+googleTextFonts = "1.7.5"
+googleSeializationJson = "2.11.0"
+retrofit = "2.11.0"
+retrofitLogging = "5.0.0-alpha.14"
 
 # testing
-androidTestCore = "1.6.0"
-archCore = "2.1.0"
+androidTestCore = "1.6.1"
+androidTestRunner = "1.6.2"
+archCore = "2.2.0"
 espresso = "3.6.1"
 extJunit = "1.2.1"
 junit = "4.13.2"
@@ -25,11 +30,10 @@ mockito = "5.14.2"
 mockitoKotlin = "5.4.0"
 
 # plugins
-agp = "8.7.2"
+agp = "8.7.3"
 compose-compiler = "2.0.0"  # must be same version as kotlin!?
 kotlin = "2.0.0"
 ksp = "2.0.0-1.0.21"
-
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -44,7 +48,8 @@ androidx-compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-compose-material-icons= { module = "androidx.compose.material:material-icons-extended" }
-androidx-compose-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-fonts" }
+
+androidx-compose-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "googleTextFonts" }
 
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
@@ -59,8 +64,8 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
-koin-core = { module = "io.insert-koin:koin-core" }
-koin-android = { module = "io.insert-koin:koin-android" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 koin-androidx-compose-navigation = { module = "io.insert-koin:koin-androidx-compose-navigation", version.ref = "koin" }
 koin-androidx-startup = { module = "io.insert-koin:koin-androidx-startup"}
@@ -69,6 +74,14 @@ kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutine
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinCoroutines" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+
+
+gson-json = {  module = "com.google.code.gson:gson", version.ref = "googleSeializationJson" }
+
+retrofit2-core = { module ="com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit2-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+retrofit2-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "retrofitLogging" }
+
 
 # testing
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -79,12 +92,11 @@ androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core",
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "extJunit" }
 androidx-test-ext-junit-ktx = { module = "androidx.test.ext:junit-ktx", version.ref = "extJunit" }
 androidx-test-ext-truth = { module = "androidx.test.ext:truth", version.ref = "truth" }
-androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidTestCore" }
+androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidTestRunner" }
 androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-navigation-testing = { module = "androidx.navigation:navigation-testing", version.ref = "navigation" }
 androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "room" }
 androidx-arch-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "archCore" }
-
 
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 koin-test-junit4 = { module = "io.insert-koin:koin-test-junit4", version.ref = "koin" }
