A6.x and A7.x adapted tp each other

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
-androidxComposeBom = "2024.10.00"
+androidxComposeBom = "2024.12.01"
 
 activityCompose = "1.9.3"
 coilCompose = "2.7.0"
 core = "1.15.0"
-kotlinCoroutines = "1.9.0"
+kotlinCoroutines = "1.10.1"
 kotlinxDatetime = "0.6.1"
 kotlinxSerializationJson = "1.7.3"
 lifecycle = "2.8.7"
-navigation = "2.8.4"
+navigation = "2.8.5"
 room = "2.6.1"
 roomKtx = "2.6.1"
-koin = "4.0.0"
-googleTextFonts = "1.7.5"
+koin = "4.0.1"
+googleTextFonts = "1.7.6"
 googleSeializationJson = "2.11.0"
 retrofit = "2.11.0"
 retrofitLogging = "5.0.0-alpha.14"
@@ -25,12 +25,12 @@ espresso = "3.6.1"
 extJunit = "1.2.1"
 junit = "4.13.2"
 truth = "1.6.0"
-manifest = "1.7.5"
+manifest = "1.7.6"
 mockito = "5.14.2"
 mockitoKotlin = "5.4.0"
 
 # plugins
-agp = "8.7.3"
+agp = "8.8.0-rc02"
 compose-compiler = "2.0.0"  # must be same version as kotlin!?
 kotlin = "2.0.0"
 ksp = "2.0.0-1.0.21"
